<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.frezrik.androidstudy.ui.activity.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.frezrik.androidstudy.ui.view.custom.CombineView
                android:id="@+id/cv_custom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cv_color="@color/grey"
                app:cv_image="@mipmap/ic_content_image"
                app:cv_text_title="@string/custom_view"
                app:cv_text_left="@string/combine_view"/>

            <com.frezrik.androidstudy.ui.view.custom.CombineView
                android:id="@+id/cv_json"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cv_color="@color/blue"
                app:cv_image="@mipmap/ic_content_send"
                app:cv_text_title="@string/parser"
                app:cv_text_left="@string/proto"
                app:cv_text_mid_up="@string/json"/>

            <com.frezrik.androidstudy.ui.view.custom.CombineView
                android:id="@+id/cv_im"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cv_color="@color/teal"
                app:cv_image="@mipmap/ic_content_image"
                app:cv_text_title="@string/imrec_view"
                app:cv_text_left="@string/camera2"
                app:cv_text_mid_up="@string/codebar"
                app:cv_text_mid_down="@string/ocrbc"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
